# epi-multi-agent-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  presentation.html  presentation2.html  pyproject.toml
docs/EPI2024_Work/Inputs/: Attributes.csv  MasterFile.csv  UpdatePackageData.R  Variable_Explanation.xlsx  cdictionary_expanded.csv  constituent_countries.csv  master_variable_list.csv  weights2024.csv
docs/EPI2024_Work/Raw/: BCG_raw_na.csv  BCP_raw_na.csv  BKF_raw.csv  BKF_raw_na.csv  CDA_CR_raw.csv  CDA_CR_raw_na.csv  CDA_raw_GCP.csv  CDA_raw_na_GCP.csv  CDG_raw.csv  CDG_raw_na.csv  CDL_raw.csv  CDL_raw_na.csv  CDO_CR_raw.csv  CDO_CR_raw_na.csv  CDP_raw.csv  CDP_raw_na.csv  CH4_CR_raw.csv  CH4_CR_raw_na.csv  CHA_CR_raw.csv  CHA_CR_raw_na.csv  CHG_raw.csv  CHG_raw_na.csv  CHP_raw.csv  CHP_raw_na.csv  COC_raw.csv  COC_raw_na.csv  CO_na.csv  CXN_raw.csv  CXN_raw_na.csv  EEW_raw.csv  EEW_raw_na.csv  ERC_raw.csv  F1D_raw.csv  F1D_raw_na.csv  F5Y_raw.csv  F5Y_raw_na.csv  FGA_CR_raw.csv  FGA_CR_raw_na.csv  FGG_raw.csv  FGG_raw_na.csv  (+66 more)
outputs/OEB/: dashboard.html  pipeline_result.json
outputs/SPI/: dashboard.html  pipeline_result.json
outputs/UWD/: dashboard.html  pipeline_result.json
outputs/WRR/: dashboard.html  pipeline_result.json
src/: __main__.py  config.py  domain_knowledge.py  orchestrator.py  report.py  schemas.py
src/stage1/: parser.py  prompts.py  research.py
src/stage2/: data_loader.py  prompts.py  validator.py  verifier.py
src/utils/: country_align.py  data_fetch.py  data_utils.py  stats.py
web/: app.py
(+165 files in other folders)
