[project]
name = "epi-proxy-discovery"
version = "0.1.0"
description = "Multi-agent system for discovering data proxies for the Yale EPI"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60",
    "anthropic>=0.40",
    "pandas>=2.0",
    "scipy>=1.11",
    "pingouin>=0.5.4",
    "pydantic>=2.5",
    "thefuzz[speedup]>=0.20",
    "requests>=2.28",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "claude-code-sdk>=0.0.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
